--- a/email.html
+++ b/email.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="static/sbb.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico">
     <style>
       /* Style to change separator  */
       .breadcrumb-item + .breadcrumb-item::before {
@@ -79,9 +80,9 @@
 
         <div class="fcf-credit" id="fcf-credit">
         </div>
-        <input type="hidden" name="_subject" value="San Blas Blues"/>
+        <input type="hidden" name="_subject" value="CV Richard Hart"/>
         <input type="hidden" name="_cc" value="richarddhart@hotmail.com" />
-        <input type="hidden" name="_next" value="https://dkboye.github.io/SanBlasBlues/index.html" />
+        <input type="hidden" name="_next" value="https://RichardDHart.github.io/CVRichardHart/index.html" />
     </form>
     </div>
 
