--- a/indice.html
+++ b/indice.html
@@ -61,7 +61,7 @@
                 <span class="cvheading">Profile</span><br>
                 <img
                     title = "Richard Hart yesterday"      
-                    src="photos/rh_foto.jpg"
+                    src="photos/rh_foto_trim.jpg"
                     width="150px"
                     alt="RH"
                     
