--- a/employment.html
+++ b/employment.html
@@ -14,7 +14,7 @@
     <link href="static/favicon.ico" rel="icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="static/styles.css" rel="stylesheet">
-
+    <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
@@ -38,10 +38,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Synopsis <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="experience.html">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="academic.html">Academic</a>
+          </li>
+          <li class="nav-item">
+            <a style="color:tomato" class="nav-link active" aria-current="page" href="email.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -154,3 +160,4 @@
     </tbody>
   </table>
 </body>
+</html>
