--- a/experience.html
+++ b/experience.html
@@ -13,7 +13,7 @@
     <link href="static/favicon.ico" rel="icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="static/styles.css">
-
+    <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
@@ -37,10 +37,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Synopsis <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="employment.html">Employment Record</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="academic.html">Academic</a>
+              </li>
+              <li class="nav-item">
+                <a style="color:tomato" class="nav-link active" aria-current="page" href="email.html">Contact</a>
+              </li>
           </ul>
         </div>
         <a class="nav-link" href="indice.html" role="button">
