--- a/index.html
+++ b/index.html
@@ -50,14 +50,18 @@
             </li>
             <li class="nav-item">
                 <a style="color:tomato" class="nav-link active" aria-current="page" href="email.html">Contact</a>
-              </li>
-          </ul>
+            </li>
+        </ul>
+        <a id="pdf" title="Download pdf file" href="downloads/CV Richard Hart.pdf"><img src="static/PDF_icon.png" width="30px"></a>
+        <a id="doc" title="Download docx file"href="downloads/CV Richard Hart.docx"><img src="static/doc.png" width="30px"></a>
+        
         </div>
-        <a class="nav-link" href="indice.html" role="button">
+        <a title="version en español" class="nav-link" href="indice.html" role="button">
             <img id = "home"
                 src="static/bandera.png"
                 alt="Flag"
-                width="25px"/>
+                width="25px"
+                />
           </a>
     </nav>
     <main style="padding-top:1vh">
