some spanish added

--- a/index.html
+++ b/index.html
@@ -51,9 +51,13 @@
             <li class="nav-item">
                 <a style="color:tomato" class="nav-link active" aria-current="page" href="email.html">Contact</a>
             </li>
+            <li class="nav-item dl">
+            <a id="pdf" title="Download pdf file" href="downloads/CV Richard Hart.pdf"><img src="static/PDF_icon.png" width="30px"></a>
+            </li>
+            <li class="nav-item dl">
+            <a id="doc" title="Download docx file"href="downloads/CV Richard Hart.docx"><img src="static/doc.png" width="30px"></a>
+            </li>
         </ul>
-        <a id="pdf" title="Download pdf file" href="downloads/CV Richard Hart.pdf"><img src="static/PDF_icon.png" width="30px"></a>
-        <a id="doc" title="Download docx file"href="downloads/CV Richard Hart.docx"><img src="static/doc.png" width="30px"></a>
         
         </div>
         <a title="version en español" class="nav-link" href="indice.html" role="button">
@@ -104,9 +108,9 @@
                         </p>
                         <span class="cvheading">Online Computer Science Courses Harvard University</span>
                     <p>
-                        Introduction to Computer Science;<br>
-                        Introduction to Artificial Intelligence with Python;<br>
-                        Web Programming with Python and JavaScript.<br>
+                        CS50 Web <i>Web Programming with Python and JavaScript;</i><br>
+                        CS50 AI <i>Introduction to Artificial Intelligence with Python;</i><br>
+                        CS50x <i>Introduction to Computer Science.</i><br>
                     </p>
                     <span class="cvheading">Professional Associations</span>
                     <p>
