--- a/empleo.html
+++ b/empleo.html
@@ -38,10 +38,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="indice.html">Sinopsis</a>
+            <a class="nav-link" href="indice.html">Casa</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="experiencia.html">Experiencia</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="academica.html">Academica</a>
+          </li>
+          <li class="nav-item">
+              <a style="color:tomato" class="nav-link active" aria-current="page" href="email.html">Contacto</a>
           </li>
         </ul>
       </div>
@@ -49,105 +55,108 @@
         <img id = "home" src="static/oz.png" alt="Bandera" width="35px"/>
       </a>
   </nav>
-<span style="margin: 5vmin;" class="cvheading">Employment Record</span><br>
+<span style="margin: 5vmin;" class="cvheading">Empleo</span><br>
 <table  style="width: fit-content" class="table">
   
     <tbody>
       <tr>
-        <td>Since Sep-13</td>
+        <td>desde sep-13</td>
         <td><b>Eptisa Servicios de Ingenieria, SL</b><br>
-            Project Manger CAT III Check N25 New Ross Bypass. Contact value €230m.<br>
-            Deputy Project Manager Landside Structures, Mersey Gateway Project. Contact value £550m.<br>
+          Jefe de proyecto chequeo CAT III, N25 New Ross Bypass, Irlanda. Valor de proyecto €230m.<br>
+          Jefe de proyecto Mersey Gateway Project. Valor de proyecto £550m.<br>
             </td>
       </tr>
       <tr>
-        <td>Jun 08- Jun 13</td>
+        <td>jun 08- jun 13</td>
         <td><b>FCC Construccion SA</b><br>
-            Responsible for producing the Working Drawings and Design Site Representative for the Danube
-             Bridge 2 Project (Bulgaria). Contract value €235m.
+          Responsable de la elaboración de los planos Working Drawings y Design Site Representative  
+          del puente Danube Bridge 2, Vidin- Calafat, Bulgaria. Valor de contrato €235m.
             </td>
       </tr>
       <tr>
-        <td>Apr-06- Jun 08</td>
+        <td>abr-06- jun 08</td>
         <td><b>Dragados SA</b><br>
-            Quality Control Technician Torre Bankia. Contract value €82m.
+          Técnico de Calidad y Medioambiente 250m Torre Bankia (antes conocido como Torre Caja Madrid y Torre Repsol), 
+          valor de contrato €82m.
             </td>
       </tr>
       <tr>
-        <td>May 04- Nov 05</td>
+        <td>may 04- nov 05</td>
         <td><b>Oproler Madrid S.A.</b><br>
-            Site manager refurbishment of 19,000m<sup>2</sup> of office space in two buildings for Ericsson Spain. Contract value €1.7m.
+          Jefe de Obra rehabilitación de los edificios de Ericsson en Madrid, valor de contrato €1,7m.
             </td>
       </tr>
       <tr>
-        <td>Sep 02- Feb 04</td>
-        <td><b>Ross & Partners, London /Fitzpatrick Contractors, London</b>
-            Resident Engineer Gibraltar General Hospital. Contract value £30m.
+        <td>sep 02- feb 04</td>
+        <td><b>Ross & Partners, Londres /Fitzpatrick Contractors, Londres</b>
+          Ross & Partners, Londres /Fitzpatrick Contractors, Londres 
+          Ingeniero Residente-Supervisor de obra.  Representante cliente 
+          Gibraltar General Hospital, Gibraltar, valor de contrato £30m.
         </td>
       </tr>
       <tr>
-        <td>Feb 00- Jul 02</td>
-        <td><b>Pondio Ingenieros, Madrid</b> Design engineer.
+        <td>feb 00- jul 02</td>
+        <td><b>Pondio Ingenieros, Madrid</b> Proyectista.
         </td>
       </tr>
       <tr>
-        <td>Sep 97- Aug 99</td>
-        <td><b>Ross & Partners, London</b> Design engineer.
+        <td>sep 97- ago 99</td>
+        <td><b>Ross & Partners, Londres</b> Proyectista.
         </td>
       </tr>
       <tr>
-        <td>May 91- Sep 97</td>
-        <td><b>John E. Foster & Partners, London</b> Design Engineer/Resident Engineer.
+        <td>may 91- sep 97</td>
+        <td><b>John E. Foster & Partners, Londres</b> Proyectista/Ingeniero de obra.
         </td>
       </tr>
       <tr>
-        <td>Aug 90- Feb 91</td>
-        <td><b>Ross & Partners, London</b> Design engineer.
+        <td>ago 90- feb 91</td>
+        <td><b>Ross & Partners, Londres</b> Proyectista.
         </td>
       </tr>
       <tr>
-        <td>Mar 90- Aug 90</td>
-        <td><b>Delta Demolitions, Melbourne</b> Site foreman.
+        <td>mar 90- ago 90</td>
+        <td><b>Delta Demolitions, Melbourne</b> Jefe de obra.
         </td>
       </tr>
       <tr>
-        <td>Dec 88- Mar 90</td>
-        <td><b>P & S Kubale Ltd, Melbourne</b> Site leading hand.
+        <td>dic 88- mar 90</td>
+        <td><b>P & S Kubale Ltd, Melbourne</b> Jefe de obra.
         </td>
       </tr>
       <tr>
-        <td>Jan 88- Dec 88</td>
-        <td><b>Zafiris Constructions, Melbourne</b> Cost estimator.
+        <td>ene 88- dic 88</td>
+        <td><b>Zafiris Constructions, Melbourne</b> Estimador de costes.
         </td>
       </tr>
       <tr>
-        <td>May 87- Dec 87</td>
-        <td><b>Ross & Partners, London</b> Design engineer.
+        <td>may 87- dic 87</td>
+        <td><b>Ross & Partners, Londres</b> Proyectista.
         </td>
       </tr>
       <tr>
-        <td>Jun 86- Mar 87</td>
-        <td><b>Reviresco Contracting, London</b> Site leading hand.
+        <td>jun 86- mar 87</td>
+        <td><b>Reviresco Contracting, Londres</b> Encargado de obra.
         </td>
       </tr>
       <tr>
-        <td>Dec 85- May 86</td>
-        <td><b>P & S Kubale Ltd, Melbourne</b> Site leading hand.
+        <td>dic 85- may 86</td>
+        <td><b>P & S Kubale Ltd, Melbourne</b> Encargado de obra.
         </td>
       </tr>
       <tr>
-        <td>May 85- Nov 85</td>
-        <td><b>Ross & Partners, London</b> Design engineer.
+        <td>may 85- nov 85</td>
+        <td><b>Ross & Partners, Londres</b> Proyectista.
         </td>
       </tr>
       <tr>
-        <td>Sep 83- Nov 84</td>
-        <td><b>P. Berger & Associates, Melbourne</b> Design Engineer.
+        <td>sep 83- nov 84</td>
+        <td><b>P. Berger & Associates, Melbourne</b> Proyectista.
         </td>
       </tr>
       <tr>
-        <td>Jan 83-Aug 83</td>
-        <td><b>Tech Builders, Melbourne</b> Site leading hand.
+        <td>ene 83-ago 83</td>
+        <td><b>Tech Builders, Melbourne</b> Encargado de obra.
         </td>
       </tr>
       
