--- a/indice.html
+++ b/indice.html
@@ -45,9 +45,13 @@
             <li class="nav-item">
               <a class="nav-link" href="experiencia.html">Experiencia</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="projects.html">Projects</a>
-            </li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="academica.html">Academica</a>
+            </li>
+            <li class="nav-item">
+                <a style="color:tomato" class="nav-link active" aria-current="page" href="email.html">Contacto</a>
+            </li>
+            
           </ul>
         </div>
         <a class="nav-link" href="index.html" role="button">
