--- a/academica.html
+++ b/academica.html
@@ -46,16 +46,19 @@
               <a class="nav-link" href="experiencia.html">Experiencia</a>
             </li>
             <li class="nav-item">
-                <a style="color:tomato" class="nav-link active" aria-current="page" href="email.html">Contacto</a>
+                <a style="color:tomato" class="nav-link active" aria-current="page" href="email_esp.html">Contacto</a>
               </li>
+            <li class="nav-item dl">
+            <a id="pdf" title="Baja pdf" href="downloads/CV Richard Hart_español.pdf"><img src="static/PDF_icon.png" width="30px"></a>
+            </li>
+            <li class="nav-item dl">
+            <a id="doc" title="Baja docx"href="downloads/CV Richard Hart_español.docx"><img src="static/doc.png" width="30px"></a>
+            </li>
           </ul>
         </div>
-        <a class="nav-link" href="indice.html" role="button">
-            <img id = "home"
-                src="static/bandera.png"
-                alt="Flag"
-                width="25px"/>
-            </a>
+        <a class="nav-link" href="index.html" role="button">
+          <img id = "home" src="static/oz.png" alt="Bandera" width="35px"/>
+        </a>
         </nav>
         <main style="padding-top:1vh">
             <h3 class="noScreen">Grado y certificados</h3>
