--- a/experiencia.html
+++ b/experiencia.html
@@ -37,17 +37,23 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="indice.html">Casa</a>
+                <a class="nav-link" href="indice.html">Casa</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="empleo.html">Empleo</a>
-              </li>
+                <a class="nav-link" aria-current="page" href="empleo.html">Empleo</a>
+            </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="email.html">Contacto</a>
-              </li>
+                <a class="nav-link" aria-current="page" href="academica.html">Academica</a>
+            </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="academica.html">Academica</a>
-              </li>
+                <a style="color:tomato" class="nav-link active" aria-current="page" href="email_esp.html">Contacto</a>
+            </li>
+            <li class="nav-item dl">
+            <a id="pdf" title="Baja pdf" href="downloads/CV Richard Hart_español.pdf"><img src="static/PDF_icon.png" width="30px"></a>
+            </li>
+            <li class="nav-item dl">
+            <a id="doc" title="Baja docx"href="downloads/CV Richard Hart_español.docx"><img src="static/doc.png" width="30px"></a>
+            </li>
           </ul>
         </div>
         <a class="nav-link" href="index.html" role="button">
@@ -60,7 +66,7 @@
         <div class="container p-2">
             
         <span class="cvheading">EPTISA</span><br>
-        <p><b>Mersey Gateway Project:</b> Jefe de Proyecto <i>Landside Structures.</i><br>
+        <p><b>Mersey Gateway Project:</b> Vice Jefe de Proyecto <i>Landside Structures.</i><br>
         <b>N25 New Ross Bypass:</b> Jefe de Proyecto chequeo CAT III.</p>
         <figure>
             <img src="photos/Mersey.jpg" alt="Mersey Gateway" style="width:90%">
@@ -68,15 +74,15 @@
             </figure>
         <figure>
             <img src="photos/ABV.jpg" alt="Mersey Gateway" style="width:90%">
-            <figcaption>Mersey Gateway Project: Astmoor & Bridgewater Viaduct (Liverpool)</figcaption>
+            <figcaption>Mersey Gateway Project: Viaducto de Astmoor & Bridgewater (Liverpool)</figcaption>
             </figure>
         <figure>
             <img src="photos/N25.jpg" alt="Mersey Gateway" style="width:90%">
             <figcaption>N25 New Ross Bypass: Barrow Crossing (Ireland)</figcaption>
             </figure>
         <span class="cvheading">FCC CONSTRUCCIÓN</span><br>
-        <p>Encargado de producción de todos los planos de construcción y representante del 
-            diseño en reuniones mensuales de obra para el <b>New Europe Bridge</b>, 
+        <p>Encargado de la producción de todos los planos de construcción y representante del 
+            diseño en los reuniones mensuales de obra para el <b>New Europe Bridge</b>, 
             previamente conocido como el Danube Bridge 2 y el Vidin-Calafat Bridge (Bulgaria). Valor de contrato 235M€.</p>
             <figure>
                 <img src="photos/vidin.jpg" alt="Mersey Gateway" style="width:90%">
@@ -89,7 +95,7 @@
                 <img src="photos/repsol.jpg" alt="Mersey Gateway" style="width:40%">
                 <figcaption>Torre Bankia (Madrid)</figcaption>
             </figure>
-            <p>Responsable para el control de la recepción de materiales (hormigon, acero etc.) y control de la ejecución.</p>
+            <p>Responsable para el control de la recepción de los materiales (hormigon, acero etc.) y el control de la ejecución.</p>
         <span class="cvheading">OPROLER MADRID SA</span><br>
         <p>Jefe de obra para la reforma de dos edificios de oficinas de 19,000m<sup>2</sup> total de Ericsson Spain. Valor de contrato €1.7m. 
             </p>
@@ -107,16 +113,15 @@
                 <img src="photos/gib.jpg" alt="Mersey Gateway" style="width:40%">
                 <figcaption>Gibraltar General Hospital</figcaption>
             </figure>
-            <p>Modificacion de la extructura de hormigon armadod en un edificio existente para convertiro
-                 de oficina a un hospital. Adicion de cubierta nueva en acero estructural y puentes peotonales de acero entre
-                  edificios existentes.</p>       
+            <p>Modificación de la estructura de hormigón armado en un edificio existente para convertirlo de oficina a un hospital. 
+                Adición de cubierta nueva en acero estructural y puentes peatonales entre las alas del edificio. </p>       
                 <p><b>Proyectista.</b></p>
                 <p>Proyectista para diversas obras/proyectos en hormigon armado, hormigon prefabricado, acero estructural, 
                     madera, estructuras de fábrica etc. Residencial, comercial, hospitales, laboratorios, and oficinas:
                 </p>
                 <p>
-                Extensión hospital, Bury St Edmunds;<br>
-                Realización de diversas modificaciones y añadidos  a más de 30 locales comerciales y residenciales en Soho, Londres;<br>
+                Ampliacion  hospital, Bury St Edmunds;<br>
+                Realización de diversas modificaciones y añadidos a más de 30 locales comerciales y residenciales en Soho, Londres;<br>
                 Estudio sobre cambios, arreglos y extensiones edificio 10 plantas y aparcamiento Aeropuerto Heathrow, Londres;<br>
                 Laboratorio de acero estructural, Dartford;<br>
                 Laboratorio de acero estructural, Ware;<br>
