--- a/email.html
+++ b/email.html
@@ -34,8 +34,16 @@
             <li class="nav-item active">
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
-            
-                      </ul>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="employment.html">Employment Record</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="experience.html">Experience</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="academic.html">Academic</a>
+            </li>
+            </ul>
         </div>
         <a class="nav-link" href="indice.html" role="button">
             <img id = "home"
