--- a/indice.html
+++ b/indice.html
@@ -49,9 +49,14 @@
               <a class="nav-link" href="academica.html">Academica</a>
             </li>
             <li class="nav-item">
-                <a style="color:tomato" class="nav-link active" aria-current="page" href="email.html">Contacto</a>
+                <a style="color:tomato" class="nav-link active" aria-current="page" href="email_esp.html">Contacto</a>
             </li>
-            
+            <li class="nav-item dl">
+                <a id="pdf" title="Baja pdf file" href="downloads/CV Richard Hart_español.pdf"><img src="static/PDF_icon.png" width="30px"></a>
+                </li>
+                <li class="nav-item dl">
+                <a id="doc" title="Baja docx"href="downloads/CV Richard Hart_español.docx"><img src="static/doc.png" width="30px"></a>
+                </li>
           </ul>
         </div>
         <a class="nav-link" href="index.html" role="button">
