--- a/empleo.html
+++ b/empleo.html
@@ -82,7 +82,7 @@
       <tr>
         <td>abr-06- jun 08</td>
         <td><b>Dragados SA</b><br>
-          Técnico de Calidad y Medioambiente 250m Torre Bankia (antes conocido como Torre Caja Madrid y Torre Repsol), 
+          Técnico de Calidad y Medioambiente Torre Cepsa, 
           valor de contrato €82m.
             </td>
       </tr>
