--- a/experience.html
+++ b/experience.html
@@ -62,8 +62,8 @@
         <h3 class="noScreen">CV Richard Hart</h3>
         <div class="container p-3">
         <span class="cvheading">EPTISA</span><br>
-            <p><b>Mersey Gateway Project:</b> Deputy Project Manager Landside Structures.<br>
-            <b>N25 New Ross Bypass:</b> Project Manage CAT III check.</p>
+            <p><a class="link" href="https://merseygateway.co.uk/">Mersey Gateway Project:</a> Deputy Project Manager Landside Structures.<br>
+            <a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass:</a> Project Manage CAT III check.</p>
             <figure>
                 <img src="photos/Mersey.jpg" alt="Mersey Gateway" style="width:90%">
                 <figcaption>Mersey Gateway Project: Main Bridge</figcaption>
@@ -78,7 +78,7 @@
                 </figure>
         <hr>
         <span class="cvheading">FCC CONSTRUCCIÓN</span><br>
-        <p>In charge of production of Working Drawings and also Design Site Representative for the <b>New Europe Bridge</b>, 
+        <p>In charge of production of Working Drawings and also Design Site Representative for the <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a>, 
         formerly known as Danube Bridge 2 and the Vidin-Calafat Bridge  (Bulgaria). Contract value 235M€.</p>
             <figure>
                 <img src="photos/vidin.jpg" alt="Mersey Gateway" style="width:90%">
@@ -91,11 +91,11 @@
         </p>
     <hr>        
         <span class="cvheading">DRAGADOS SA</span><br>
-        <p>Quality Control Technician on 250m <b>Torre Bankia</b> (formerly known as Torre Caja Madrid and Torre Repsol). 
+        <p>Quality Control Technician <a class="link" href="https://es.wikipedia.org/wiki/Torre_Cepsa">Torre Cepsa</a> 
             Contract value €82M.</p>
             <figure>
                 <img src="photos/repsol.jpg" alt="Mersey Gateway" style="width:40%">
-                <figcaption>Torre Bankia (Madrid)</figcaption>
+                <figcaption>Torre Cepsa (Madrid)</figcaption>
             </figure>
             <p>Responsible for quality control checking of concrete structure and concrete-steel composite slabs: 
                 placing of reinforcing bars, checking of shear studs, concrete sampling and 7 and 28 day cylinder strengths etc.</p>
