--- a/experiencia.html
+++ b/experiencia.html
@@ -66,8 +66,8 @@
         <div class="container p-2">
             
         <span class="cvheading">EPTISA</span><br>
-        <p><b>Mersey Gateway Project:</b> Vice Jefe de Proyecto <i>Landside Structures.</i><br>
-        <b>N25 New Ross Bypass:</b> Jefe de Proyecto chequeo CAT III.</p>
+        <p><a class="link" href="https://merseygateway.co.uk/">Mersey Gateway Project:</a> Vice Jefe de Proyecto <i>Landside Structures.</i><br>
+            <a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass:</a> Jefe de Proyecto chequeo CAT III.</p>
         <figure>
             <img src="photos/Mersey.jpg" alt="Mersey Gateway" style="width:90%">
             <figcaption>Mersey Gateway Project: Puente principal</figcaption>
@@ -82,14 +82,14 @@
             </figure>
         <span class="cvheading">FCC CONSTRUCCIÓN</span><br>
         <p>Encargado de la producción de todos los planos de construcción y representante del 
-            diseño en los reuniones mensuales de obra para el <b>New Europe Bridge</b>, 
+            diseño en los reuniones mensuales de obra para el <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a>, 
             previamente conocido como el Danube Bridge 2 y el Vidin-Calafat Bridge (Bulgaria). Valor de contrato 235M€.</p>
             <figure>
                 <img src="photos/vidin.jpg" alt="Mersey Gateway" style="width:90%">
                 <figcaption>New Europe Bridge (Bulgaria)</figcaption>
             </figure>
         <span class="cvheading">DRAGADOS SA</span><br>
-        <p>Tecnico de Control de Calidad <b>Torre Bankia</b> (antes conocido como Torre Caja Madrid y Torre Repsol). 
+        <p>Tecnico de Control de Calidad <a class="link" href="https://es.wikipedia.org/wiki/Torre_Cepsa">Torre Cepsa</a>. 
             Valor de contrato €82M.</p>
             <figure>
                 <img src="photos/repsol.jpg" alt="Mersey Gateway" style="width:40%">
