--- a/academic.html
+++ b/academic.html
@@ -27,9 +27,9 @@
         }
     </style>
 </head>
-<body>
+<body style="background-color:#f6f6f6;">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">CV Richard Hart</a>
+        <a class="navbar-brand" href="index.html">CV Richard Hart</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -57,28 +57,28 @@
                 width="25px"/>
             </a>
         </nav>
-        <main style="padding-top:1vh">
-            <h3 class="noScreen">Degree and Certificates</h3>
-            <div class="container p-2">
-                <div class="column">
-                    <figure>
-                        <img src="degrees/degree.PNG" alt="Degree" style="width:90%">
-                        <figcaption>Engineering degree</figcaption>
-                        </figure>
-                    <figure>
-                        <img src="degrees/istructe.PNG" alt="Structures" style="width:90%">
-                        <figcaption>Corporate membership IStructE</figcaption>
-                        </figure>
-                    <figure>
-                        <img src="degrees/cs50x.PNG" alt="Structures" style="width:90%">
-                        <figcaption>Introduction to computer Science</figcaption>
-                        </figure>
-                    <figure>
-                        <img id="webcert" src="degrees/cs50w.jpg" alt="Structures" style="width:90%">
-                        <figcaption>Web Programming</figcaption>
-                        </figure>
-    </div>
-    </div>
+    <main style="padding-top:1vh; text-align:center;">
+        <h3 class="noScreen">Degree and Certificates</h3>
+        <div class="container p-2">
+            <div class="column">
+                <figure>
+                    <img src="degrees/degree.PNG" alt="Degree" style="width:90%">
+                    <figcaption>Engineering degree</figcaption>
+                    </figure>
+                <figure>
+                    <img src="degrees/istructe.PNG" alt="Structures" style="width:90%">
+                    <figcaption>Corporate membership IStructE</figcaption>
+                    </figure>
+                <figure>
+                    <img src="degrees/cs50x.PNG" alt="Structures" style="width:90%">
+                    <figcaption>Introduction to computer Science</figcaption>
+                    </figure>
+                <figure>
+                    <img id="webcert" src="degrees/cs50w.jpg" alt="Structures" style="width:90%">
+                    <figcaption>Web Programming</figcaption>
+                    </figure>
+            </div>
+        </div>
     </main>
-    </body>
-    </html>
+</body>
+</html>
