--- a/academica.html
+++ b/academica.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">CV Richard Hart</a>
+        <a class="navbar-brand" href="indice.html">CV Richard Hart</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -60,28 +60,28 @@
           <img id = "home" src="static/oz.png" alt="Bandera" width="35px"/>
         </a>
         </nav>
-        <main style="padding-top:1vh">
-            <h3 class="noScreen">Grado y certificados</h3>
-            <div class="container p-2">
-                <div class="column">
-                    <figure>
-                        <img src="degrees/degree.PNG" alt="Degree" style="width:90%">
-                        <figcaption>Grado Ingeniero Civil</figcaption>
-                        </figure>
-                    <figure>
-                        <img src="degrees/istructe.PNG" alt="Structures" style="width:90%">
-                        <figcaption>Colegio de ingenieros IStructE</figcaption>
-                        </figure>
-                    <figure>
-                        <img src="degrees/cs50x.PNG" alt="Structures" style="width:90%">
-                        <figcaption>CS50x <i>Introduction to computer Science</i></figcaption>
-                        </figure>
-                    <figure>
-                        <img id="webcert" src="degrees/cs50w.jpg" alt="Structures" style="width:90%">
-                        <figcaption>CS50 Web <i>Web Programming</i></figcaption>
-                        </figure>
-    </div>
-    </div>
-    </main>
-    </body>
-    </html>
+    <main style="padding-top:1vh; text-align:center;">
+      <h3 class="noScreen">Grado y certificados</h3>
+      <div class="container p-2">
+          <div class="column">
+              <figure>
+                  <img src="degrees/degree.PNG" alt="Degree" style="width:90%">
+                  <figcaption>Grado Ingeniero Civil</figcaption>
+                  </figure>
+              <figure>
+                  <img src="degrees/istructe.PNG" alt="Structures" style="width:90%">
+                  <figcaption>Colegio de ingenieros IStructE</figcaption>
+                  </figure>
+              <figure>
+                  <img src="degrees/cs50x.PNG" alt="Structures" style="width:90%">
+                  <figcaption>CS50x <i>Introduction to computer Science</i></figcaption>
+                  </figure>
+              <figure>
+                  <img id="webcert" src="degrees/cs50w.jpg" alt="Structures" style="width:90%">
+                  <figcaption>CS50 Web <i>Web Programming</i></figcaption>
+                  </figure>
+            </div>
+        </div>
+      </main>
+  </body>
+  </html>
