--- a/employment.html
+++ b/employment.html
@@ -30,7 +30,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">CV Richard Hart</a>
+      <a class="navbar-brand" href="index.html">CV Richard Hart</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -56,7 +56,7 @@
         </a>
   </nav>
 <span style="margin: 5vmin;" class="cvheading">Employment Record</span><br>
-<table  style="width: fit-content" class="table">
+<table  style="width: fit-content" class="table table-hover">
   
     <tbody>
       <tr>
