--- a/experiencia.html
+++ b/experiencia.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">CV Richard Hart</a>
+        <a class="navbar-brand" href="indice.html">CV Richard Hart</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -61,7 +61,7 @@
           </a>
             
     </nav>
-    <main style="padding-top:1vh">
+    <main style="padding-top:1vh;">
         <h3 class="noScreen">CV Richard Hart</h3>
         <div class="container p-2">
             
