--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <a class="nav-link" href="academic.html">Academic</a>
             </li>
             <li class="nav-item">
-                <a style="color:tomato" class="nav-link active" aria-current="page" href="email.html">Contact</a>
+                <a style="color:tomato" class="nav-link" aria-current="page" href="email.html">Contact</a>
             </li>
             <li class="nav-item dl">
             <a id="pdf" title="Download pdf file" href="downloads/CV Richard Hart.pdf"><img src="static/PDF_icon.png" width="30px"></a>
@@ -65,7 +65,7 @@
                 />
           </a>
     </nav>
-    <main style="padding-top:1vh">
+    <main style="padding-top:1vh; background-color:#f6f6f6;">
         <h3 class="noScreen">CV Richard Hart</h3>
         <div class="container p-2">
             <div class="column">
@@ -117,7 +117,7 @@
                 </div>
                 <div class="row" style="padding-left:5px">
                     <span class="cvheading">Recent Experience</span>
-                    <p><b><u>Mersey Gateway Project</u></b></p>
+                    <a class="link" href="https://merseygateway.co.uk/">Mersey Gateway Project</a><br>
                     <p><b>Deputy Project Manager Landside Structures.</b> 
                         Project manager for Eptisa  whose design responsibilities covered all retaining walls, 
                         drainage for the entire project including the Main Bridge, geotechnical design and 
@@ -126,13 +126,13 @@
                         He attended weekly design coordination meetings as well as monthly DJV Board meetings.</p>
                     </div>
                     <div class="row" style="padding-left:5px">
-                        <p><b><u>N25 New Ross Bypass</u></b></p>
+                        <a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass</a><br>
                         <p><b>Project Manager CAT III check including Barrow Crossing.</b> Richard was responsible for overseeing 
                             the independent checking (category 3) and acceptance of structural drawings and geotechnical reports 
                             as well as attending client coordination meetings.</p>
                         </div>
                         <div class="row" style="padding-left:5px">
-                            <p><b><u>Danube Bridge 2</u></b></p>
+                            <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a><br>
                             <p><b>Management of production of Working Drawings and also Design Site Representative</b> for the New Europe Bridge, 
                                 formerly known as Danube Bridge 2 and the Vidin–Calafat Bridge  (Bulgaria). Richard was responsible for developing 
                                 the design general arrangement drawings for the entire project into working drawings. 
