--- a/indice.html
+++ b/indice.html
@@ -63,11 +63,11 @@
           <img id = "home" src="static/oz.png" alt="Bandera" width="35px"/>
         </a>
     </nav>
-    <main style="padding-top:1vh">
+    <main style="padding-top:1vh; background-color:#f6f6f6;">
         <h3 class="noScreen">CV Richard Hart</h3>
         <div class="container p-2">
             <div class="column">
-                <span class="cvheading">Profile</span><br>
+                <span class="cvheading">Perfil</span><br>
                 <img
                     title = "Richard Hart yesterday"      
                     src="photos/rh_foto_trim.jpg"
@@ -75,68 +75,67 @@
                     alt="RH"
                     
                     />
-                    <p>Richard has nearly 40 years of construction industry experience in the fields of civil and structural engineering. His experience covers both building structures and more recently, bridge projects.
-                        He has worked in Australia, England and Spain where he now resides.</p>
+                    <p>Richard cuenta con casi 40 años de experiencia como ingeniero civil y estructural. 
+                        Su experiencia cubre tanto edificación como puentes en los últimos años. 
+                        Ha trabajado en Australia, Inglaterra y España donde vive.</p>
                     </div>
                     <div class="column">
-                        <span class="cvheading">Key Experience</span>
-                        <p>
-                            Broad range of experience in design, site supervision, independent checking and project management.<br>
-                            Structural design of building projects in reinforced concrete, structural steelwork, timber, and masonry.<br>
-                            Civil Engineering design of paved areas  and drainage in housing developments.<br>
-                            Quantities estimating, structural surveys and appraisals of existing buildings, reports,  method statements, specifications etc.<br>
-                            Technical evaluation of civil engineering claims.<br>
-                            Experience with Australian, British, Spanish, and American Standards and Codes of Practice as well as Eurocodes.<br>
+                        <span class="cvheading">Experiencia clave</span>
+                        <p>Una experiencia amplia en diseño, supervisión de obra, chequeos independientes y gestión de proyectos;<br>
+                            Diseño estructural en edificación utilizando hormigón armada, acero, madera y estructuras de fábrica;<br>
+                            Diseño de pavimiento y drenaje en urbanizaciones;<br>
+                            Estimaciones de cuantías, inspecciones y evaluaciones de edificios, informes, declaraciones de método y especificaciones etc.;<br>
+                            Evaluación técnica de reclamaciones;<br>
+                            Experiencia con las normas australianas, inglesas, españolas y los eurocódigos.
                         </p>    
                     </div>
                     <div class="column">
-                        <span class="cvheading">Profession</span> 
-                        <p>Structural/Civil Engineer</p>
-                        <span class="cvheading">Nationality/Languages</span>
-                        <p>
-                            Australian<br>
-                            Spanish - Fluent<br>
-                        </p>
-                        <span class="cvheading">Qualifications</span>
-                        <p>
-                            BE (Civil) University of Melbourne. 1982<br>
-                        </p>
-                        <span class="cvheading">Online Computer Science Courses Harvard University</span>
+                    <span class="cvheading">Profesión</span> 
+                    <p>Ingeniero civil/estructural</p>
+                    <span class="cvheading">Nacionalidad</span>
                     <p>
-                        Introduction to Computer Science;<br>
-                        Introduction to Artificial Intelligence with Python;<br>
-                        Web Programming with Python and JavaScript.<br>
+                        Australiana<br>
                     </p>
-                    <span class="cvheading">Professional Associations</span>
+                    <span class="cvheading">Formación académica</span>
                     <p>
-                        Corporate Member Institution of Structural Engineers (MIStructE)<br>
-                        Graduate Member Institution of Civil Engineers (GMICE)<br>
+                        BE (Civil) University of Melbourne. 1982<br>
+                    </p>
+                    <span class="cvheading">Cursos en línea Universidad de Harvard</span>
+                    <p>
+                        CS50 Web <i>Web Programming with Python and JavaScript;</i><br>
+                        CS50 AI <i>Introduction to Artificial Intelligence  with Python;</i><br>
+                        CS50x <i>Introduction to Computer Science.</i>
+                    </p>
+                    <span class="cvheading">Colegios profesionales</span>
+                    <p>
+                        Socio corporativo Institution of Structural Engineers (MIStructE);<br>
+                        Socio graduado Institution of Civil Engineers (GMICE).
                     </p>
                 </div>
                 <div class="row" style="padding-left:5px">
-                    <span class="cvheading">Recent Experience</span>
-                    <p><b><u>Mersey Gateway Project</u></b></p>
-                    <p><b>Deputy Project Manager Landside Structures.</b> 
-                        Project manager for Eptisa  whose design responsibilities covered all retaining walls, 
-                        drainage for the entire project including the Main Bridge, geotechnical design and 
-                        sub-structure design Astmoor & Bridgewater Viaduct. Richard was responsible for the 
-                        supervision of production and submission of drawings and reports, including quality control. 
-                        He attended weekly design coordination meetings as well as monthly DJV Board meetings.</p>
+                    <span class="cvheading">Experiencia reciente</span>
+                    <a class="link" href="https://merseygateway.co.uk/">Mersey Gateway Project:</a><br>
+                    <p><b>Vice Jefe de Proyecto Landside Structures.</b> Jefe de Proyecto para Eptisa cubriendo el 
+                        diseño de los muros de contención, drenaje, y geotecnia para el proyecto entero 
+                        incluyendo el puente principal, y de la subestructura del viaducto de Astmoor & Bridgewater. 
+                        Richard fue el responsable para la supervisión de la producción y sumisión de los planos y 
+                        informes, incluyendo el control de calidad. Asistió en las reuniones semanales del diseño 
+                        y las reuniones mensuales de la junta directiva.</p>
                     </div>
                     <div class="row" style="padding-left:5px">
-                        <p><b><u>N25 New Ross Bypass</u></b></p>
-                        <p><b>Project Manager CAT III check including Barrow Crossing.</b> Richard was responsible for overseeing 
-                            the independent checking (category 3) and acceptance of structural drawings and geotechnical reports 
-                            as well as attending client coordination meetings.</p>
+                        <a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass</a><br>
+                        <p><b>Jefe de Proyecto cheque CAT III.</b> Richard fue el responsable para la supervisión 
+                            del chequeo independiente categoría 3 incluyendo asistencia en las reuniones de 
+                            coordinación del Cliente. </p>
                         </div>
                         <div class="row" style="padding-left:5px">
-                            <p><b><u>Danube Bridge 2</u></b></p>
-                            <p><b>Management of production of Working Drawings and also Design Site Representative</b> for the New Europe Bridge, 
-                                formerly known as Danube Bridge 2 and the Vidin–Calafat Bridge  (Bulgaria). Richard was responsible for developing 
-                                the design general arrangement drawings for the entire project into working drawings. 
-                                These included the river crossing and approach as well as the railway bridge and the drainage design for both structures. 
-                                He was also the Design Site Representative and attended monthly site design coordination meetings 
-                                between designers, client and checking engineers.</p>
+                            <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a><br>
+                            <p><b>Gestión de la producción de los planos constructivos y representante del diseño 
+                                en obra</b> para el New Europe Bridge, antes conocido como el Danube Bridge 2 o el 
+                                Vidin-Calafat Bridge  (Bulgaria). Richard fue responsable para el desarrollo de 
+                                los planos de diseño a los planos de construcción. Incluido el Puente principal 
+                                y sus viaductos, el viaducto del ferrocarril y el drenaje. También fue el 
+                                representante en obra del diseño.</p>
                             </div>
                         </div>
                     </div>
